Archive2/75/27c36ade701931/output
main.cpp: In function 'int main()':
main.cpp:13:14: error: qualified-id in declaration before '[' token
      int C::v[n];
              ^
